Added leader functionality
Leaders can now be selected. Including cheap hero, CHOAM auditor and harkonnen hostages
Leaders can also be killed afterwards
Added a "total strength" number field

--- a/styles.css
+++ b/styles.css
@@ -36,3 +36,11 @@
   visibility: visible;
   opacity: 1;
 }
+
+img {
+    cursor:pointer;
+    max-width:100%;
+    /*For centering an img*/
+    display:block;
+    margin:auto;
+}
