--- a/styles.css
+++ b/styles.css
@@ -54,4 +54,8 @@ img {
   grid-template-columns: 100px 100px 100px;
   align-items: center;
   justify-content: center;
+  column-gap: 20px;
+  row-gap: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
