--- a/styles.css
+++ b/styles.css
@@ -59,3 +59,14 @@ img {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+.duo-grid-container {
+	display: grid;
+  grid-template-columns: 200px 200px;
+  align-items: center;
+  justify-content: center;
+  column-gap: 20px;
+  row-gap: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
