--- a/styles.css
+++ b/styles.css
@@ -70,3 +70,13 @@ img {
   margin-top: 10px;
   margin-bottom: 10px;
 }
+
+big {
+	font-size: 200%;
+	font-weight: bold;
+}
+
+chlogvers {
+	font-size: 150%;
+	font-weight: bold;
+}
