Piter value change and visuals
- Piter De Vries was mistakenly valued at 4, is now correct at 3
- Made strength and total strength values labels and made total stength stand out a lot more

--- a/styles.css
+++ b/styles.css
@@ -80,6 +80,11 @@ big {
 	font-weight: bold;
 }
 
+.big {
+	font-size: 300%;
+	font-weight: bold;
+}
+
 chlogvers {
 	font-size: 150%;
 	font-weight: bold;
